# fkey

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MERGE_V1.0.100_NOTES.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  build-simple.ps1  package.json
.beads/: issues.jsonl  last-touched
.devcontainer/: devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
core/: Cargo.toml
core/src/: config.rs  engine.rs  keyboard.rs  lib.rs  test_utils.rs  utils.rs
core/src/data/: constants.rs  english_dict_merged.txt  vowel.rs
core/src/engine/: buffer.rs  mod.rs  shortcut.rs  syllable.rs  transform.rs  validation.rs
core/src/input/: mod.rs  telex.rs  vni.rs
core/tests/: auto_capitalize_test.rs  auto_restore_dynamic_test.rs  basic_test.rs  bug_reports_test.rs  char_test.rs  common_issues_test.rs  debug_kisna_test.rs  debug_lwu_moef.rs  edge_cases_test.rs  engine_test.rs  english_auto_restore_test.rs  english_words_test.rs  integration_test.rs  paragraph_test.rs  sentence_test.rs  test_diphthong_tone_order.rs  test_gusta_quick.rs  test_lissa_larra.rs  typing_order_consistency_test.rs  typing_order_permutation_test.rs  typing_test.rs  unit_test.rs  vietnamese_test.rs  word_test.rs
core/tests/common/: mod.rs
core/tests/data/: english_100k_failures.txt  english_100k_failures_vowel.txt  vietnamese_22k_failures.txt  vietnamese_22k_typing_variants.txt  vietnamese_telex_pairs.txt
docs/: DEVELOPMENT.md  README.md  architecture.md  code-standards.md  codebase-summary.md  common-issues.md  core-engine-algorithm.md  development.md  (+9 more)
(+22 files in other folders)
