[package]
name = "gonhanh-core"
version = "0.1.0"
edition = "2021"
authors = ["GoNhanh Contributors"]
license = "GPL-3.0-or-later"
description = "Vietnamese input method engine - Core library"
repository = "https://github.com/yourusername/gonhanh.org"

[lib]
name = "gonhanh_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
rdev = "0.5"
enigo = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
rstest = "0.18"

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization
strip = true             # Strip symbols
panic = "abort"          # Smaller binary
